# Falcon

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  editor.cpp  in.txt  main.cpp
editor/: ctor.cpp  deletecharback.cpp  deletecharforw.cpp  drawlinenumbers.cpp  drawlines.cpp  dtor.cpp  editor.hpp  editor.ih  initialize.cpp  insertchar.cpp  keypressedarrowdown.cpp  keypressedarrowup.cpp  movecursordown.cpp  movecursorup.cpp  openfile.cpp  processkeypress.cpp  readkey.cpp  resizeterminal.cpp  run.cpp  savefile.cpp
falcon/: .gitignore  ctor.cpp  drawlinenumbers.cpp  drawlines.cpp  dtor.cpp  falcon.cpp  falcon.hpp  falcon.ih  initialize.cpp  openfile.cpp  processkeypress.cpp  readkey.cpp  run.cpp  setpath.cpp
